--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Wed Apr 22 2015 03:33:56 GMT+0000 (UTC) -->
+<!-- Last Published: Wed Apr 29 2015 04:45:08 GMT+0000 (UTC) -->
 <html data-wf-site="552d93e68f4602c87dfc79f2" data-wf-page="552d93e68f4602c87dfc79f4">
 <head>
   <meta charset="utf-8">
@@ -39,7 +39,7 @@
         <div class="w-col w-col-4">
           <div class="app-name">blckur</div>
         </div>
-        <div class="w-col w-col-8 nav-column"><a class="nav-link" href="https://app.blckur.com/#/login">Login</a><a class="nav-link" href="https://app.blckur.com/#/signup">Sign Up</a>
+        <div class="w-col w-col-8 nav-column"><a class="nav-link" href="https://app.blckur.com/">Login</a><a class="nav-link" href="https://app.blckur.com/#/signup">Sign Up</a>
         </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
         <div class="w-col w-col-6 call-to-action">
           <h1 class="hero-header">Simple notifications</h1>
           <p class="hero-subtitle">Get detailed notifications with filters in one simple interface</p>
-          <div class="buttons"><a class="button" href="https://app.blckur.com/#/login">Login</a><a class="button" href="https://app.blckur.com/#/signup">Sign Up</a>
+          <div class="buttons"><a class="button" href="https://app.blckur.com/">Login</a><a class="button" href="https://app.blckur.com/#/signup">Sign Up</a>
           </div>
         </div>
       </div>
